fix spacing of elements

--- a/src/app/DesktopSideNavigation.module.css
+++ b/src/app/DesktopSideNavigation.module.css
@@ -6,6 +6,9 @@
   width: var(--desktop-sidebar-width);
 
   padding-left: 16px;
+
+  padding-top: 23px;
+  padding-bottom: 32px;
 }
 
 .container path {
@@ -16,6 +19,8 @@
   display: flex;
   flex-direction: column;
   gap: 16px;
+
+  flex: 1;
 }
 
 .selected {
